--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>React Redux App</title>
   </head>
   <body>
